[package]
name = "illuminate-container"
version = "0.1.0"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "Illuminate Container"
license = "MIT"

[dependencies]
illuminate-contracts = { path = "../Contracts", version = "0.1.0"} 

[lints.rust]
dead_code = "allow"
unused = "allow"
