[package]
name = "illuminate-container"
version = "0.1.0"
edition = "2024"
authors = ["Joseph Raub <joseph@raubstudios.com>"]
description = "Illuminate Container"
repository = "https://github.com/RaubJo/illuminate-container"
license = "MIT"

[dependencies]
illuminate-contracts = { path = "../Contracts", version = "0.1.0"} 

[lints.rust]
dead_code = "allow"
unused = "allow"
